--- a/hdp/public/css/style-site.css
+++ b/hdp/public/css/style-site.css
@@ -17,6 +17,7 @@ body {
     height: 4vh;
     align-items: center;
     position: fixed;
+    z-index: 1;
 }
 
 .fundoInicial {
@@ -162,6 +163,90 @@ img{
 
 }
 
+.corpo4 .flip-card {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flip-card {
+  border-radius: 15px;
+  background-color: transparent;
+  width: 300px;
+  height: 220px;
+  
+  perspective: 1000px;
+  /* Remove this if you don't want the 3D effect */
+  margin: 50px;
+  margin-bottom: 10%;
+  border: 1px solid black;
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  border-radius: 15px;
+  position: relative;
+  width: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  height: 220px;
+  position: fixed;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+  height: 220px;
+
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  border-radius: 15px;
+  position: absolute;
+  width: 100%;
+  height: 220px;
+  -webkit-backface-visibility: hidden;
+  /* Safari */
+  backface-visibility: hidden;
+  position: fixed;
+
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #999;
+  color: black;
+  height: 220px;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  transform: rotateY(180deg);
+  height: 220px;
+  background-color: #bbb;
+  position: fixed;
+
+}
+
+
+.corpo4 {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  height: 52vh;
+  align-items: center;
+  width: 100vw;
+}
+
+.caixas {
+  display: flex;
+  flex-direction: row;
+}
+
 .container {
   display: flex;
   width: 100vw;
@@ -185,7 +270,7 @@ img{
   padding: 1%;
 }
 
-.box .img3 {
+.flip-card .img3 {
   margin-top: 10px;
   width: 55%;
   align-items: center;
